[package]
name = "bevy-fun-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = [
"x11",
 ] }
bevy_ecs =  "0.10.0"
bevy-inspector-egui = "0.18.1"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
rand = "0.8"
bevy_pancam = "0.8.0"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d", "parallel" ] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
